Updated dark mode to use css to show images so can load before document to prevent white flash

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
 @import "tailwindcss/utilities";
 
 @layer components {
+
+    /* resposive videos */
     .video-container {
         @apply relative overflow-hidden;
         padding-bottom: 56.25%;
@@ -10,6 +12,16 @@
     .video-container>iframe {
         @apply absolute inset-0 w-full h-full;
     }
+
+    /* show correct dark mode icon */
+    html.dark #button-dark-mode #light-mode-icon {
+        @apply hidden;
+    }
+    html:not(.dark) #button-dark-mode #dark-mode-icon {
+        @apply hidden;
+    }
+
+    /* buttons */
     .btn {
         @apply inline-block text-lg text-center font-semibold px-4 py-2 whitespace-nowrap focus:outline-none focus:ring;
     }
